@@ -259,12 +259,22 @@ AC_SUBST(GNOME_PRINT_LIBS)
 
 have_gdk_x11=no
 PKG_CHECK_MODULES(GDK_X11, gdk-x11-2.0 >= 2.0.0, have_gdk_x11=yes, have_gdk_x11=no)
-AC_SUBST(GDK_X11_CFLAGS)
-AC_SUBST(GDK_X11_LIBS)
 
 if test "x$have_gdk_x11" = "xyes"; then
-	AC_DEFINE(ENABLE_XEMBED, 1, [Is XEmbed available])
+	AC_PATH_XTRA
+
+	if test "x$have_x" != "xyes"; then
+		GDK_X11_LIBS=""
+		GDK_X11_CFLAGS=""
+	else
+		GDK_X11_LIBS="$GDK_X11_LIBS $X_LIBS -lX11"
+		GDK_X11_CFLAGS="$GDK_X11_CFLAGS $X_CFLAGS"
+		AC_DEFINE(ENABLE_XEMBED, 1, [Is XEmbed available])
+	fi
 fi
+
+AC_SUBST(GDK_X11_CFLAGS)
+AC_SUBST(GDK_X11_LIBS)
 
 AC_ARG_ENABLE(gtk-theme,
     [  --enable-gtk-theme  Enable a RSVG based GTK+ theme engine [default=auto]],,
